--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ article .content-wrapper {
   width: 80%;
   padding-bottom: 20px;
   border-bottom: 5px solid #F5C4C4;
+  text-align: justify;
 }
 
 /* Footer styles */
